--- a/cv/index.html
+++ b/cv/index.html
@@ -65,7 +65,7 @@
     
 
     <div class="article-content">
-      <p>This is a link to my (not always up-to-date) <a href="https://github.com/martinezsebastian/Files/blob/master/Sebastian_Martinez_CV.pdf">CV</a>. If you would like to see my latest publications please head to my Google Scholar website.</p>
+      <p>This is a link to my (not always up-to-date) <a href="https://www.dropbox.com/s/b5tfhpp2dunr4ns/Sebastian_Martinez_CV.pdf?dl=0">CV</a>. If you would like to see my latest publications please head to my Google Scholar website.</p>
 
     </div>
   </article>
